--- a/theInstagramClone/package.json
+++ b/theInstagramClone/package.json
@@ -13,5 +13,8 @@
     "express": "^4.16.3",
     "fs": "0.0.1-security",
     "http": "0.0.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.11.1"
   }
 }
