--- a/theInstagramClone/package.json
+++ b/theInstagramClone/package.json
@@ -12,7 +12,9 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "fs": "0.0.1-security",
-    "http": "0.0.0"
+    "http": "0.0.0",
+    "multer": "^1.3.0",
+    "socket.io": "^2.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.11.1"
